UI fixes on mobile with scaling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -190,3 +190,7 @@
 html {
   font-size: var(--font-size);
 }
+
+html {
+  -webkit-text-size-adjust: 100%;
+}
